--- a/InfopasazerService/InfopasazerService.csproj
+++ b/InfopasazerService/InfopasazerService.csproj
@@ -61,14 +61,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="GetStations.svc" />
+    <Content Include="Stations.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GetStations.svc.cs">
-      <DependentUpon>GetStations.svc</DependentUpon>
+    <Compile Include="Stations.svc.cs">
+      <DependentUpon>Stations.svc</DependentUpon>
     </Compile>
-    <Compile Include="IGetStations.cs" />
+    <Compile Include="IStations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -83,7 +83,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Infopasazer\InfopasazerMiner\InfopasazerMiner.fsproj">
+    <ProjectReference Include="..\InfopasazerMiner\InfopasazerMiner.fsproj">
       <Project>{cd061c39-365f-4e93-9649-0ed51d9ccf36}</Project>
       <Name>InfopasazerMiner</Name>
     </ProjectReference>
