Station photos as backgrounds

--- a/InfopasazerApp/InfopasazerApp.csproj
+++ b/InfopasazerApp/InfopasazerApp.csproj
@@ -109,6 +109,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BingApi.cs" />
+    <Compile Include="JSONs.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
