--- a/InfopasazerApp/InfopasazerApp.csproj
+++ b/InfopasazerApp/InfopasazerApp.csproj
@@ -91,17 +91,30 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="project.json" />
     <None Include="Properties\ServiceReferences.Designer.ClientConfig" />
-    <None Include="Service References\InfopasazerServiceReference\InfopasazerApp.InfopasazerServiceReference.Station.datasource">
+    <None Include="Service References\StationsServiceReference\InfopasazerApp.StationsServiceReference.Station.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\InfopasazerServiceReference\Stations.wsdl" />
-    <None Include="Service References\InfopasazerServiceReference\Stations.xsd">
+    <None Include="Service References\StationsServiceReference\Stations.wsdl" />
+    <None Include="Service References\StationsServiceReference\Stations.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\InfopasazerServiceReference\Stations1.xsd">
+    <None Include="Service References\StationsServiceReference\Stations1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\InfopasazerServiceReference\Stations2.xsd">
+    <None Include="Service References\StationsServiceReference\Stations2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TrainsServiceReference\InfopasazerApp.TrainsServiceReference.TrainGroup.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\TrainsServiceReference\Trains.wsdl" />
+    <None Include="Service References\TrainsServiceReference\Trains.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TrainsServiceReference\Trains1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TrainsServiceReference\Trains2.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -115,7 +128,12 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\InfopasazerServiceReference\Reference.cs">
+    <Compile Include="Service References\StationsServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Service References\TrainsServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -140,13 +158,20 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-    <None Include="Service References\InfopasazerServiceReference\Reference.svcmap">
+    <None Include="Service References\TrainsServiceReference\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <None Include="Service References\InfopasazerServiceReference\configuration.svcinfo" />
-    <None Include="Service References\InfopasazerServiceReference\configuration91.svcinfo" />
-    <None Include="Service References\InfopasazerServiceReference\Stations.disco" />
+    <None Include="Service References\TrainsServiceReference\configuration.svcinfo" />
+    <None Include="Service References\TrainsServiceReference\configuration91.svcinfo" />
+    <None Include="Service References\TrainsServiceReference\Trains.disco" />
+    <None Include="Service References\StationsServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Service References\StationsServiceReference\configuration.svcinfo" />
+    <None Include="Service References\StationsServiceReference\configuration91.svcinfo" />
+    <None Include="Service References\StationsServiceReference\Stations.disco" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -166,7 +191,8 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\InfopasazerServiceReference\" />
+    <WCFMetadataStorage Include="Service References\StationsServiceReference\" />
+    <WCFMetadataStorage Include="Service References\TrainsServiceReference\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
