--- a/InfopasazerMiner/InfopasazerMiner.fsproj
+++ b/InfopasazerMiner/InfopasazerMiner.fsproj
@@ -54,6 +54,7 @@
     <Compile Include="Station.fs" />
     <Compile Include="Train.fs" />
     <Compile Include="TrainGroup.fs" />
+    <Compile Include="TrainStation.fs" />
     <Compile Include="InfopasazerMiner.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
