--- a/InfopasazerService/InfopasazerService.csproj
+++ b/InfopasazerService/InfopasazerService.csproj
@@ -76,9 +76,7 @@
       <DependentUpon>Trains.svc</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
